--- a/README
+++ b/README
@@ -1,3 +1,11 @@
+Fork Note
+=========
+This repository is forked from the pmelsted's original BFCounter repository. The
+point of this fork is to explore the performance of the tool when using a
+Quotient Filter instead of a Bloom Filter for filtering unique k-mers. Initial
+results from a class project suggest that there could be a dramatic speed-up in
+computing environments where the filter grows beyond memory.
+
 BFCounter is a memory efficient program for counting k-mers from sequencing files.
 
 Installation
